# vers

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  lib.sh  move.sh  project.json  requirements.txt  vers.py
Documentation/: asm.md  build.md  buildscript.md  commands.md  directories.md  hello_world.md  imports.md
cli/: Cargo.toml  install.py  main.py  new.py  run.py  version.py
cli/src/: help.rs  install.py  install.rs  lib.rs  new.py  new.rs  version.rs  verspy.py
clib/: Makefile  color.h  messages.cpp  messages.h  string_man.cpp  string_man.h
compiler/: Cargo.toml  Makefile  asm.py  build.rs  compile.cpp  compile.py  compiler.h  errors.py  finish.py  functions.cpp  functions.h  imports.py  main.py  project.cpp  project.h  vers.py  warnings.py
compiler/arch/: x86_64.h
compiler/src/: compiler.rs  functions.rs  lib.rs  project.rs
compiler/src/arch/: mod.rs  x86_64.rs
compiler/src/messages/: errors.rs  messages.rs  mod.rs  warnings.rs
compiler/src/vers/: asm.rs  (+5 more)
compiler/versl/: asm.cpp  asm.h  exe.cpp  gcc.cpp  gcc.h  lib.cpp  translate.cpp  vers.cpp  vers.h
example/: .gitignore  asm.vers  project.json  project.txt
example/src/: example.vh  main.vers
examples/: .gitignore  hello.vers  main.vers  math.vers  string.vers  test.vers
lib/: Makefile
lib/std/: build.sh  project.json
src/: Makefile  main.cpp  main.rs
std/: build.sh  project.json
std/src/: lib.vers  printStuff.c
stdlib/: .gitignore  Makefile  vstd.vers
versc/: .gitignore  Cargo.toml  Makefile
versc/src/: c.rs  compile.rs  gcc.rs  lib.rs  main.rs  syntax.rs  types.rs
(+6 files in other folders)
